--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.11",
     "@types/react-dom": "^19.0.4",
+    "ag-grid-community": "^33.1.1",
+    "ag-grid-react": "^33.1.1",
     "next": "^15.2.3",
     "next-auth": "^4.24.11",
     "supabase": "^2.19.7",
