--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@types/react-dom": "^19.0.4",
     "ag-grid-community": "^33.1.1",
     "ag-grid-react": "^33.1.1",
+    "chart.js": "^4.4.8",
     "next": "^15.2.3",
     "next-auth": "^4.24.11",
+    "react-chartjs-2": "^5.3.0",
     "supabase": "^2.19.7",
     "tailwindcss": "^4.0.14",
     "typescript": "^5.8.2"
